# RtgAcw

./: .gitignore  CMakeLists.txt  RtgAcw.sln  RtgAcw.vcxproj  RtgAcw.vcxproj.filters
GlacierEngine/: GlacierEngine.vcxproj  GlacierEngine.vcxproj.filters  emitter_conponent.h
GlacierEngine/include/: application.h  camera_component.h  camera_system.h  cfg.h  component.h  emitter_conponent.h  glacier_engine.h  keyboard_input_component.h  keypress_message.h  light_component.h  light_system.h  mesh_utils.h  message.h  ncf_util.h  object.h  observer.h  observer_subject.h  path_component.h  rendering_component.h  resource.h  resource_manager.h  scene.h  scene_manager.h  shader_program_manager.h  system.h  texture.h  timer.h
GlacierEngine/src/: application.cpp  camera_component.cpp  camera_system.cpp  cfg.cpp  component.cpp  emitter_component.cpp  engine_context.cpp  keyboard_input_component.cpp  light_component.cpp  light_system.cpp  mesh_utils.cpp  message.cpp  ncf.cpp  ncf_util.cpp  object.cpp  (+10 more)
include/: camera_keyboard_input_component.h  color_pass.h  deep_sea_fish.h  drebel_sub.h  main_scene.h  rtg_application.h  water_jet_sub.h
sdr/: color_pass.ps.hlsl  color_pass.vs.hlsl  depth_pass.ps.hlsl  depth_pass.vs.hlsl  globe.ps.hlsl  globe.vs.hlsl  particles.ps.hlsl  particles.vs.hlsl  render_texture.ps.hlsl  render_texture.vs.hlsl  skybox.ps.hlsl  skybox.vs.hlsl  test.ps.hlsl  test.vs.hlsl
src/: camera_keyboard_input_component.cpp  color_pass.cpp  deep_sea_fish.cpp  drebel_sub.cpp  main.cpp  main_scene.cpp  rtg_application.cpp  rtg_application.h  water_jet_sub.cpp
(+65 files in other folders)
